Updated the readme

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ libnmath
 The nemesis math library implements a variety of datatypes and utilities
 that are useful in graphics related applications. The library provides a 
 double interface in c and c++.
+
+libnmath is based on Nuclear's libvmath
