--- a/README
+++ b/README
@@ -5,4 +5,4 @@ The nemesis math library implements a variety of datatypes and utilities
 that are useful in graphics related applications. The library provides a 
 double interface in c and c++.
 
-libnmath is based on Nuclear's libvmath
+libnmath is based on Nuclear's libvmath gfxtools.sourceforge.net
