--- a/README
+++ b/README
@@ -1,9 +1,14 @@
-libnmath
---------
-Copyright 2010, 2011 (c) Papadopoulos Nikos <nikpapas@gmail.com>
+LIBNMATH
 
-About
------
+Copyright 2010 - 2012 (c) Papadopoulos Nikos <nikpapas@gmail.com>
+
 The nemesis math library implements a variety of datatypes and utilities 
-that are useful in graphics related applications. The library provides a 
-double interface in c and c++.
+that are useful in graphics related applications.
+
+
+Older versions
+--------------
+v1.0.0.0	50b9273a52bac42686a1680b8f533c8e74772f52
+v1.1.0.0	4d0fc0b52842da0e3a021608da7c88906fdaec6a
+v1.2.0.0	ff4584a50e33b1335b1060b31dc38dc9a66863a4
+v1.3.x.x	HEAD
